# cincinnati

./: .dockerignore  .gitignore  .spectral.yaml  1378-1379.txt  AGENTS.md  Cargo.toml  Dockerfile  Justfile  OCPBUGS-25833.txt  OTA-1378-1379  OWNERS  OWNERS_ALIASES  README.md  code-of-conduct.md  fromqe.md  rh-manifest.txt
cincinnati/: Cargo.toml  build.rs
cincinnati/src/: conditional_edges.rs  lib.rs
cincinnati/src/plugins/: catalog.rs  interface.proto  interface.rs  macros.rs  mod.rs  registry.rs
cincinnati/src/plugins/internal/: arch_filter.rs  assign_wariness.rs  channel_filter.rs  cincinnati_graph_fetch.rs  edge_add_remove.rs  metadata_fetch_quay.rs  mod.rs  node_remove.rs  versioned_graph.rs
cincinnati/src/plugins/test_fixtures/: edge_add_remove_trigger_edge_index_error.json
commons/: Cargo.toml
commons/src/: config.rs  de.rs  errors.rs  lib.rs  metrics.rs  testing.rs  tracing.rs
e2e/: Cargo.toml  e2e.rs
e2e/stage_monitoring/: Dockerfile.cincy  Dockerfile.digest  Dockerfile.spec  check_cincinnati.sh  check_cincinnati_digest.sh  check_cincinnati_spec.sh  deployment.yaml  readme.md
e2e/tests/: e2e.rs  prometheus_query.rs  slo.rs
e2e/tests/testdata/: 134475077ed4eeaedf3c339f12915b9cdaf7d194_candidate-4.12_multi_v1.json  134475077ed4eeaedf3c339f12915b9cdaf7d194_stable-4.7_amd64_v1.json  134475077ed4eeaedf3c339f12915b9cdaf7d194_stable-4.7_s390x_v1.json  134475077ed4eeaedf3c339f12915b9cdaf7d194_stable-4.8_amd64_v1.json  134475077ed4eeaedf3c339f12915b9cdaf7d194_stable-4.8_s390x_v1.json  134475077ed4eeaedf3c339f12915b9cdaf7d194_stable-4.9_amd64_v1.json  134475077ed4eeaedf3c339f12915b9cdaf7d194_stable-4.9_s390x_v1.json  421646a6e9592b179c26b3c77d406820c479a19c_stable-4.2_amd64.json  421646a6e9592b179c26b3c77d406820c479a19c_stable-4.2_amd64_v1.json  421646a6e9592b179c26b3c77d406820c479a19c_stable-4.2_s390x.json  421646a6e9592b179c26b3c77d406820c479a19c_stable-4.2_s390x_v1.json  421646a6e9592b179c26b3c77d406820c479a19c_stable-4.3_amd64.json  421646a6e9592b179c26b3c77d406820c479a19c_stable-4.3_amd64_v1.json  421646a6e9592b179c26b3c77d406820c479a19c_stable-4.3_s390x.json  421646a6e9592b179c26b3c77d406820c479a19c_stable-4.3_s390x_v1.json  Dockerfile  a-amd64.json  a8d95e7095cc0b335cd3ea16abafcde62326fce1_stable-4.7_amd64_v1.json  a8d95e7095cc0b335cd3ea16abafcde62326fce1_stable-4.7_s390x_v1.json  a8d95e7095cc0b335cd3ea16abafcde62326fce1_stable-4.8_amd64_v1.json  a8d95e7095cc0b335cd3ea16abafcde62326fce1_stable-4.8_s390x_v1.json  a8d95e7095cc0b335cd3ea16abafcde62326fce1_stable-4.9_amd64_v1.json  a8d95e7095cc0b335cd3ea16abafcde62326fce1_stable-4.9_s390x_v1.json  b-amd64.json  b87e7c2782837a3538b0aa3dceb9e8133765ec81_stable-4.2_amd64.json  b87e7c2782837a3538b0aa3dceb9e8133765ec81_stable-4.2_s390x.json  b87e7c2782837a3538b0aa3dceb9e8133765ec81_stable-4.3_amd64-production.json  b87e7c2782837a3538b0aa3dceb9e8133765ec81_stable-4.3_amd64.json  b87e7c2782837a3538b0aa3dceb9e8133765ec81_stable-4.3_s390x.json  d980578d2e9b1869b6b1e22711c68c03f0751974_stable-4.2_amd64-production.json  d980578d2e9b1869b6b1e22711c68c03f0751974_stable-4.2_s390x-production.json  d980578d2e9b1869b6b1e22711c68c03f0751974_stable-4.3_amd64-production.json  metadata_revision  test-amd64.json
graph-builder/: Cargo.toml
graph-builder/src/: config.rs  graph.rs  lib.rs  main.rs  metadata.rs  metrics.rs  registry.rs  release.rs  status.rs
graph-builder/src/config/: cli.rs  file.rs  mod.rs  options.rs  settings.rs  unified.rs
graph-builder/src/plugins/: mod.rs
graph-builder/src/plugins/github_openshift_secondary_metadata_scraper/: github_v3.rs  plugin.rs
graph-builder/src/plugins/openshift_secondary_metadata_parser/: mod.rs  plugin.rs
graph-builder/src/plugins/release_scrape_dockerv2/: mod.rs  plugin.rs
graph-builder/src/tests/: mod.rs
graph-builder/tests/: mod.rs
graph-builder/tests/e2e/: mod.rs
graph-builder/tests/e2e/testdata/: a-amd64.json  test-amd64.json
graph-builder/tests/fixtures/: sample-config.toml
graph-builder/tests/images/: build-n-push-buildah.sh  build-n-push.sh  test-cyclic-public-manual-0.0.0  test-labels-private-manual-0.0.0  test-labels-private-manual-0.0.1  test-labels-private-manual-0.0.2  test-labels-private-manual-0.0.3  test-labels-public-manual-0.0.1
graph-builder/tests/images/test-0.0.0/: Dockerfile  cincinnati_1.json
graph-builder/tests/images/test-0.0.1/: Dockerfile
graph-builder/tests/images/test-cyclic-public-manual-0.0.2/: Dockerfile  release-metadata
graph-builder/tests/images/test-emptyfirsttag-public-manual-0.0.0/: Dockerfile
graph-builder/tests/images/test-labels-public-manual-0.0.2/: release-metadata_0.json  release-metadata_1.json
graph-builder/tests/images/test-labels-public-manual-0.0.3/: release-metadata_0.json  release-metadata_1.json
graph-builder/tests/images/test-labels:0.0.0/: Dockerfile  cincinnati_0.json  cincinnati_1.json
graph-builder/tests/images/test-labels:0.0.1/: Dockerfile  cincinnati_0.json  cincinnati_1.json
graph-builder/tests/images/test-nojson-public-manual-0.0.0/: Dockerfile
graph-builder/tests/images/test-private-manual-0.0.0/: Dockerfile  release-metadata_0.json  release-metadata_1.json
graph-builder/tests/images/test-private-manual-0.0.1/: release-metadata
graph-builder/tests/net/: mod.rs  quay_credentials.json
graph-builder/tests/net/quay_io/: mod.rs
graph-builder/tests/slo/: mod.rs
metadata-helper/: Cargo.toml
metadata-helper/src/: main.rs  signatures.rs  status.rs
metadata-helper/src/config/: cli.rs  file.rs  options.rs  settings.rs
policy-engine/: Cargo.toml
policy-engine/src/: build.rs  config.rs  graph.rs  main.rs  metrics.rs  openapi.rs  openapiv3.json  status.rs
policy-engine/src/config/: cli.rs  file.rs  mod.rs  options.rs  settings.rs
policy-engine/tests/fixtures/: sample-config.toml
prometheus-query/: Cargo.toml
prometheus-query/src/: lib.rs
prometheus-query/src/v1/: mod.rs
quay/: Cargo.toml
quay/src/: lib.rs
quay/src/v1/: manifest.rs  mod.rs  tag.rs
quay/tests/net/: mod.rs  private.rs
rh-manifest-generator/: Cargo.toml
rh-manifest-generator/src/: main.rs
(+231 files in other folders)
