[package]
name = "cincinnati"
version = "0.1.0"
authors = ["Alex Crawford <crawford@redhat.com>"]
edition = "2018"

[dependencies]
actix-web = "^4.4.1"
commons = { path = "../commons" }
custom_debug_derive = "^0.5"
daggy = { version = "^0.8.0", features = [ "serde-1" ] }
env_logger = "^0.10"
futures = "0.3"
lazy_static = "^1.2.0"
log = "^0.4.20"
prometheus = "0.13"
protobuf = "2.20.0"
quay = { path = "../quay" }
regex = "^1.9.6"
reqwest = { version = "^0.11", features = ["gzip", "rustls-tls-native-roots", "native-tls"] }
serde = "1.0.189"
serde_derive = "1.0.70"
serde_json = "^1.0.109"
smart-default = "^0.7"
tokio = { version = "1.32", features = [ "time", "fs", "macros", "rt-multi-thread" ] }
tokio-stream = { version = "0.1", features = ["fs"] }
toml = "^0.8.2"
url = "^2.5"
semver = { version = "^0.11", features = [ "serde" ] }
async-trait = "^0.1"
tempfile = "^3.8.0"
flate2 = "^1.0.28"
tar = "^0.4.40"
dkregistry = { git = "https://github.com/camallo/dkregistry-rs.git", rev = "0a3c99b7ede0c177a4389e0ffd9e566572633f8c" }
itertools = "^0.12"
serde_yaml = "^0.9.25"
prettydiff = { version = "0.6", optional = true }
opentelemetry = "0.14.0"
strum = "^0.26"
strum_macros = "^0.25"
walkdir = "2.4.0"
bytes = "^1.5"
pgp = "^0.7.2"
zeroize = "=1.3.0"
hamcrest2 = "0.3.0"
cached = "^0.50.0"

[dev-dependencies]
mockito = "0.31.1"
serde_json = "1.0.109"
memchr = "^2.7"
pretty_assertions = "1.4.0"
test-case = "1.2.3"
prettydiff = "0.6"

[build-dependencies]
protoc-rust = "2.28"

[features]
codegen-protoc = []
test-net = []
test-net-private = []
# Used on a few implementations which shall not be used in non-test code
test = [ "prettydiff" ]
