[package]
name = "cincinnati"
version = "0.1.0"
authors = ["Alex Crawford <crawford@redhat.com>"]
edition = "2018"

[dependencies]
actix-web = "^4.12.1"
commons = { path = "../commons" }
custom_debug_derive = "^0.5"
daggy = { version = "^0.8.0", features = [ "serde-1" ] }
env_logger = "^0.10"
futures = "0.3"
lazy_static = "^1.5.0"
log = "^0.4.20"
prometheus = "0.13"
protobuf = "2.20.0"
quay = { path = "../quay" }
regex = "^1.11.1"
reqwest = { version = "^0.12", features = ["gzip", "rustls-tls-native-roots", "native-tls"] }
serde = "1.0.189"
serde_derive = "1.0.70"
serde_json = "^1.0.109"
smart-default = "^0.7"
tokio = { version = "1.33", features = [ "time", "fs", "macros", "rt-multi-thread" ] }
tokio-stream = { version = "0.1", features = ["fs"] }
toml = "^0.8.2"
url = "^2.5"
semver = { version = "^0.11", features = [ "serde" ] }
async-trait = "^0.1"
tempfile = "^3.8.0"
flate2 = "^1.0.34"
tar = "^0.4.40"
dkregistry = { git = "https://github.com/camallo/dkregistry-rs.git", rev = "89d190c313653afabee66032a4c88efd804f0829" }
itertools = "^0.13"
serde_yaml = "^0.9.34"
opentelemetry = "0.14.0"
strum = "^0.26"
strum_macros = "^0.25"
walkdir = "2.5.0"
bytes = "^1.5"
pgp = "^0.14.2"
zeroize = "=1.7.0"
hamcrest2 = "0.3.0"
cached = "^0.44.0"
similar = { version = "2.6.0", optional = true }
thiserror = "1.0"

[dev-dependencies]
mockito = "0.31.1"
serde_json = "1.0.109"
memchr = "^2.7"
pretty_assertions = "1.4.1"
test-case = "1.2.3"
similar = "2.6.0"

[build-dependencies]
protoc-rust = "2.28"

[features]
codegen-protoc = []
test-net = []
test-net-private = []
# Used on a few implementations which shall not be used in non-test code
test = ["similar"]
