[package]
name = "e2e"
version = "0.1.0"
authors = ["Vadim Rutkovsky <vrutkovs@redhat.com>"]
edition = "2018"

[dependencies]
assert-json-diff = "1.0.0"
chrono = "^0.4.0"
env_logger = "^0.8"
failure = "^0.1.1"
reqwest = "^0.10"
serde = "^1.0.70"
serde_derive = "^1.0.70"
serde_json = "^1.0.22"
test-case = "1.0.0"
url = "^2.2"
commons = { path = "../commons" }
tokio = { version = "0.2.11", features = [ "fs", "stream" ] }
prometheus-query = { path = "../prometheus-query" }
lazy_static = "^1.2.0"
cincinnati = { path = "../cincinnati", features = ["test"] }

[features]
test-e2e-prom-query = []
