[package]
name = "e2e"
version = "0.1.0"
authors = ["Vadim Rutkovsky <vrutkovs@redhat.com>"]
edition = "2018"

[dependencies]
anyhow = "^1.0"
assert-json-diff = "2.0.1"
chrono = "^0.4.0"
env_logger = "^0.8"
failure = "^0.1.1"
reqwest = { version="^0.11", features = ["blocking"] }
serde = "^1.0.70"
serde_derive = "^1.0.70"
serde_json = "^1.0.22"
test-case = { version = "1.1.0", features = ["hamcrest_assertions"] }
hamcrest2 = "0.3.0"
url = "^2.2"
commons = { path = "../commons" }
tokio = { version = "1.5", features = [ "fs", "rt-multi-thread" ] }
tokio-stream = { version = "0.1", features = ["fs"] }
prometheus-query = { path = "../prometheus-query" }
lazy_static = "^1.2.0"
cincinnati = { path = "../cincinnati", features = ["test"] }

[features]
test-e2e-prom-query = []
