[package]
name = "graph-builder"
version = "0.1.0"
authors = ["Alex Crawford <crawford@redhat.com>"]
edition = "2018"
build = "src/build.rs"

[dependencies]
actix = "0.13.2"
actix-web = "^4.12.1"
chrono = "^0.4.38"
actix-files = "^0.6.5"
cincinnati = { path = "../cincinnati" }
commons = { path = "../commons" }
env_logger = "^0.10"
flate2 = "^1.0.34"
futures = "0.3"
itertools = "^0.13"
lazy_static = "^1.5.0"
log = "^0.4.20"
prometheus = "0.13"
quay = { path = "../quay" }
regex = "^1.11.1"
reqwest = "^0.12"
semver = { version = "^0.11", features = [ "serde" ] }
serde = "^1.0.189"
serde_derive = "^1.0.70"
serde_json = "^1.0.109"
smart-default = "^0.7"
structopt = "^0.3"
tar = "^0.4.40"
tokio = { version = "1.33", features = [ "fs",  "rt-multi-thread" ] }
tokio-stream = { version = "0.1", features = ["fs"] }
toml = "^0.8.2"
url = "^2.5"
parking_lot = "^0.12"
tempfile = "^3.8.0"
async-trait = "^0.1"
custom_debug_derive = "^0.5"
opentelemetry = "0.14.0"
actix-service = "2.0.2"

[build-dependencies]
built = { version = "^0.7.4", features = [ "git2" ]}

[dev-dependencies]
memchr = "^2.7"

[features]
test-net = []
test-net-private = []
