[package]
name = "metadata-helper"
version = "0.1.0"
authors = ["Pratik Mahajan <pmahajan@redhat.com>"]
edition = "2018"
build = "src/build.rs"

[dependencies]
actix = "0.13.2"
actix-cors = "^0.6.5"
actix-files = "^0.6.5"
actix-service = "2.0.2"
actix-web = "^4.12.1"
cincinnati = { path = "../cincinnati" }
commons = { path = "../commons" }
custom_debug_derive = "^0.5"
env_logger = "^0.10"
futures = "^0.3"
hyper = "^1.1"
lazy_static = "^1.5.0"
log = "^0.4.20"
opentelemetry = "0.14.0"
parking_lot = "^0.12"
prometheus = "0.13"
semver = { version = "^1.0.16", features = [ "serde" ] }
serde = "^1.0.189"
serde_derive = "^1.0.70"
serde_json = "^1.0.109"
smart-default = "0.7.1"
structopt = "^0.3"
tempfile = "^3.8.0"
toml = "^0.8.2"
url = "^2.5"

[build-dependencies]
built = { version = "^0.7.4", features = [ "git2" ]}

[dev-dependencies]
tokio = { version = "1.33", features = [ "rt-multi-thread" ] }
