[package]
name = "policy-engine"
version = "0.1.0"
authors = ["Alex Crawford <crawford@redhat.com>"]
edition = "2018"
build = "src/build.rs"

[dependencies]
actix = "0.13.0"
actix-cors = "^0.6.1"
actix-web = "^4.0.0-rc.3"
cincinnati = { path = "../cincinnati" }
commons = { path = "../commons" }
env_logger = "^0.10"
futures = "^0.3"
hyper = "^0.14"
lazy_static = "^1.2.0"
log = "^0.4.17"
openapiv3 = "1.0"
parking_lot = "^0.12"
prometheus = "0.13"
semver = { version = "^0.11", features = [ "serde" ] }
serde = "^1.0.175"
serde_derive = "^1.0.70"
serde_json = "^1.0.104"
smart-default = "^0.7"
structopt = "^0.3"
toml = "^0.5"
url = "^2.3"
tempfile = "^3.7.1"
custom_debug_derive = "^0.5"
opentelemetry = "0.14.0"
actix-service = "2.0.2"

[build-dependencies]
built = { version = "^0.6.1", features = [ "git2" ]}

[dev-dependencies]
tokio = { version = "1.30", features = [ "rt-multi-thread" ] }
memchr = "^2.5"
mockito = "^1.1.0"
