[package]
name = "prometheus-query"
version = "0.0.0-dev"
authors = ["Stefan Junker <mail@stefanjunker.de>"]
publish = false
edition = "2018"

[dependencies]
commons = { path = "../commons" }
anyhow = "^1.0"
futures = "^0.3"
reqwest = "^0.11"
serde = { version = "^1.0.189", features = ["derive"] }
serde_derive = "^1.0.84"
serde_json = "^1.0.107"
strum = "^0.25"
strum_macros = "^0.25"
log = "^0.4.20"
chrono = "^0.4.31"

[dev-dependencies]
env_logger = "^0.10"
tokio = { version = "1.32", features = [ "rt-multi-thread" ] }
