[package]
name = "quay"
version = "0.0.0-dev"
authors = ["Luca Bruno <luca.bruno@coreos.com>"]
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0"
futures = "^0.3"
reqwest = { version = "^0.11", features = ["json"] }
serde = "^1.0.183"
serde_derive = "^1.0.84"
serde_json = "^1.0.107"
async-stream = "0.3"

[dev-dependencies]
env_logger = "^0.10"
tokio = { version = "1.32", features = [ "rt-multi-thread" ] }

[features]
test-net = []
test-net-private = []
