[package]
name = "rh-manifest-generator"
version = "0.1.0"
authors = ["Stefan Junker <mail@stefanjunker.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-lock = "10.0"
lazy_static = "1.5"
reqwest = { version = "0.12", features = ["blocking"] }
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0"
